create a logo class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-      <h1>Anto's Photos</h1>
+      <h1 class="logo">Anto's Photos</h1>
     </header>
 </body>
 </html>
