Add page names to list items

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <header>
       <h1 class="logo">Anto's Photos</h1>
+        <nav>
+            <ul>
+                <li>home</li>
+                <li>about</li>
+                <li>galley</li>
+                <li>contact us</li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
