Add nav-menu class to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
       <h1 class="logo">Anto's Photos</h1>
-        <nav>
+        <nav class="nav-menu">
             <ul>
                 <li>home</li>
                 <li>about</li>
