--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
       <h1 class="logo">Anto's Photos</h1>
-        <nav class="nav-menu">
-            <ul>
+        <nav>
+            <ul class="nav-links">
                 <li>home</li>
                 <li>about</li>
                 <li>galley</li>
