Fix gallery typo in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="nav-links">
                 <li>home</li>
                 <li>about</li>
-                <li>galley</li>
+                <li>gallery</li>
                 <li>contact us</li>
             </ul>
         </nav>
