Add a tags to list items

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h1 class="logo">Anto's Photos</h1>
         <nav>
             <ul class="nav-links">
-                <li>home</li>
-                <li>about</li>
-                <li>gallery</li>
-                <li>contact us</li>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">gallery</a></li>
+                <li><a href="">contact us</a></li>
             </ul>
         </nav>
     </header>
