add and style .active

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h1 class="logo">Anto's Photos</h1>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">home</a></li>
+                <li><a href="index.html" class="active">home</a></li>
                 <li><a href="#">about</a></li>
                 <li><a href="#">gallery</a></li>
-                <li><a href="">contact us</a></li>
+                <li><a href="#">contact us</a></li>
             </ul>
         </nav>
     </header>
