make logo clickable link to home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">Anto's Photos</h1>
+        <h1 class="logo"><a href="index.html">Anto's Photos</a></h1>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">home</a></li>
