--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/4e483d3294.js" crossorigin="anonymous"></script>
     <title>Anto's Photos</title>
 </head>
 <body>
     <header>
-      <h1 class="logo"><a href="index.html">Anto's Photos</a></h1>
+      <h1 class="logo"><a href="index.html">Anto's<i class="fa-solid fa-camera"></i>Photos</a></h1>
         <nav>
           <ul class="nav-links">
             <li><a href="index.html" class="active">home</a></li>
