--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
           </ul>
         </nav>
     </header>
+    <section>
+      <div id="hero-image">
+
+      </div>
+    </section>
 </body>
 </html>
