Add headings and text to #slogan

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </header>
     <section>
       <div id="slogan">
-
+        <h2>
+          Welcome to Anto's Photos!
+        </h2>
+          <h3>We Capture the memories that matter to you</h3>
       </div>
     </section>
   </div>
