Create a button inside the slogan div with an id of book-now

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <h2>
           Welcome to Anto's Photos!
         </h2>
-          <h3>We Capture the memories that matter to you</h3>
+        <h3>
+          We Capture the memories that matter to you
+        </h3>
+        <button><a href="#">Book Now!</a></button>
       </div>
     </section>
   </div>
