Create an <a> tag within the button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>
           We Capture the memories that matter to you
         </h3>
-        <button><a href="#">Book Now!</a></button>
+        <button id="book-now"><a href="#">Book Now!</a></button>
       </div>
     </section>
   </div>
