Add extra content to #slogan div

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         <h2>
           Welcome to Anto's Photos!
         </h2>
+        <br>
         <h3>
           We Capture the memories that matter to you
         </h3>
+        <br>
+        <h4>all events catered for, hit the button below to get in touch</h4>
         <button id="book-now"><a href="#">Book Now!</a></button>
       </div>
     </section>
