Edit content in #slogan div

--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
     <section>
       <div id="slogan">
         <h2>
-          Welcome to Anto's Photos!
+          Need a Photographer?
         </h2>
         <br>
         <h3>
-          We Capture the memories that matter to you
+          Anto's Photos have got you covered!
         </h3>
         <br>
-        <h4>all events catered for, hit the button below to get in touch</h4>
+        <h3>
+          We Capture the memories, while you go enjoy your day.
+        </h3>
+        <br>
+        <h3>
+          All events catered for, hit the button below to get in touch
+        </h3>
         <button id="book-now"><a href="#">Book Now!</a></button>
       </div>
     </section>
