Add a div with an id of about inside a new section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           </ul>
         </nav>
     </header>
+    <!--Home Page-->
     <section>
       <div id="slogan">
         <h2>
@@ -39,6 +40,11 @@
           All events catered for, hit the button below to get in touch
         </h3>
         <button id="book-now"><a href="#">Book Now!</a></button>
+      </div>
+    </section>
+    <section>
+      <div id="about">
+
       </div>
     </section>
   </div>
