Add more header and text content to the #about div

--- a/index.html
+++ b/index.html
@@ -44,7 +44,21 @@
     </section>
     <section>
       <div id="about">
-        <h2>About</h2>
+        <h2>
+          About
+        </h2>
+          <br>
+        <h3>
+          At Anto's Photos our photographers have been working in the field over 50 years.
+        </h3>
+          <br>
+        <h3>
+          We provide a friendly, artistic and professional approach to our work, specifically tailored to your needs.
+        </h3>
+          <br>
+        <h3>
+          We take pride in our work, the photos we take mean as much to us as they do to you.
+        </h3>
       </div>
     </section>
   </div>
