Edit text content in the divs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </h3>
         <br>
         <h3>
-          All events catered for, hit the button below to get in touch
+          All events catered for, hit the button below to get in touch.
         </h3>
         <button id="book-now"><a href="#">Book Now!</a></button>
       </div>
@@ -57,7 +57,7 @@
         </h3>
           <br>
         <h3>
-          We take pride in our work, the photos we take mean as much to us as they do to you.
+          We take pride in our work, the photos we take matter as much to us as they do to you.
         </h3>
       </div>
     </section>
