Create a new section for gallery containing an img tag

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <button id="book-now"><a href="#">Book Now!</a></button>
       </div>
     </section>
+    <!--About Page-->
     <section>
       <div id="about">
         <h2>
@@ -62,6 +63,10 @@
           We take pride in our work, the photos we take matter as much to us as they do to you.
         </h3>
       </div>
+    </section>
+    <!--Gallery Page-->
+    <section>
+      <img src="#" alt="#">
     </section>
   </div>
 </body>
