--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
     <!--Gallery Page-->
     <section>
-      <img src="#" alt="#">
+      <img src="assets/images/cat-chilling.jpg" alt="Cat chilling on a pillar">
     </section>
   </div>
 </body>
