--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     </section>
     <!--Gallery Page-->
     <section>
-      <img src="assets/images/cat-chilling.jpg" alt="Cat chilling on a pillar">
+      <div id="gallery">
+        <img src="assets/images/cat-chilling.jpg" alt="Cat chilling on a pillar">
+      </div>
     </section>
   </div>
 </body>
