Add more header and text content to #gallery

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
     <!--Gallery Page-->
     <section>
       <div id="gallery">
+        <h2>
+          Gallery
+        </h2>
+          <br>
+        <h3>
+          Examples of our work:
+        </h3>
         <img src="assets/images/cat-chilling.jpg" alt="Cat chilling on a pillar">
       </div>
     </section>
