Add more photographs to images folder and link them to the gallery

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
           Examples of our work:
         </h3>
         <img src="assets/images/cat-chilling.jpg" alt="Cat chilling on a pillar">
+        <img src="assets/images/lake-sunset-small.jpg" alt="Sun setting by the lake">
+        <img src="assets/images/horses-posing.jpg" alt="Horses posing in a field">
       </div>
     </section>
   </div>
