--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <h1 class="logo"><a href="index.html">Anto's <i class="fa-solid fa-camera"></i> Photos</a></h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="index.html" class="active">home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">gallery</a></li>
+          <li><a href="#home-section" class="active">home</a></li>
+          <li><a href="#about-section" class="active">about</a></li>
+          <li><a href="#gallery-section" class="active">gallery</a></li>
           <li><a href="#">contact us</a></li>
         </ul>
       </nav>
     </header>
     <!--Home Page-->
-    <section>
+    <section id="home-section">
       <div id="slogan">
         <h2>
           Need a Photographer?
@@ -45,7 +45,7 @@
       </div>
     </section>
     <!--About Page-->
-    <section>
+    <section id="about-section">
       <div id="about">
         <h2>
           About
@@ -65,7 +65,7 @@
       </div>
     </section>
     <!--Gallery Page-->
-    <section>
+    <section id="gallery-section">
       <div id="gallery">
         <h2>
           Gallery
