Remove class .active from html code

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <h1 class="logo"><a href="index.html">Anto's <i class="fa-solid fa-camera"></i> Photos</a></h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="#home-section" class="active">home</a></li>
-          <li><a href="#about-section" class="active">about</a></li>
-          <li><a href="#gallery-section" class="active">gallery</a></li>
+          <li><a href="#home-section">home</a></li>
+          <li><a href="#about-section">about</a></li>
+          <li><a href="#gallery-section">gallery</a></li>
           <li><a href="#">contact us</a></li>
         </ul>
       </nav>
