Add a new section with id of contact-section and also create a div with id of contact-us within this section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#home-section">home</a></li>
           <li><a href="#about-section">about</a></li>
           <li><a href="#gallery-section">gallery</a></li>
-          <li><a href="#">contact us</a></li>
+          <li><a href="#contact-section">contact us</a></li>
         </ul>
       </nav>
     </header>
@@ -78,6 +78,12 @@
         <img src="assets/images/lake-sunset-small.jpg" alt="Sun setting by the lake">
         <img src="assets/images/horses-posing.jpg" alt="Horses posing in a field">
       </div>
+    </section>
+    <section id="contact-section">
+      <div id="contact-us">
+
+      </div>
+
     </section>
   </div>
 </body>
