Create a h2 with text content in #contact-us div

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     </section>
     <section id="contact-section">
       <div id="contact-us">
+        <h2>
+          Contact Us
+        </h2>
 
       </div>
 
