--- a/index.html
+++ b/index.html
@@ -84,7 +84,19 @@
         <h2>
           Contact Us
         </h2>
-          <form action="" method="get"></form>
+          <form action="" method="get">
+
+            <label for="first-name">First Name:</label>
+            <input id="#first-name"type="text" required>
+            <br>
+            <label for="surname">Surname:</label>
+            <input id="#surname" type="text" required>
+            <br>
+            <label for="email">Email:</label>
+            <input id="#email" type="email" required>
+            <br>
+            
+          </form>
 
       </div>
 
