Add a select and options to form

--- a/index.html
+++ b/index.html
@@ -87,15 +87,25 @@
           <form action="" method="get">
 
             <label for="first-name">First Name:</label>
-            <input id="#first-name"type="text" required>
+            <input id="first-name"type="text" required>
             <br>
             <label for="surname">Surname:</label>
-            <input id="#surname" type="text" required>
+            <input id="surname" type="text" required>
             <br>
             <label for="email">Email:</label>
-            <input id="#email" type="email" required>
+            <input id="email" type="email" required>
             <br>
-            
+            <label for="occasion">Occasion Type:</label>
+              <select name="occasion" id="ocassion" required>
+                <option value="Wedding">Wedding</option>
+                <option value="Christening/Communion/Confirmation">Christening/Communion/Confirmation</option>
+                <option value="Birthday/Party">Birthday/Party</option>
+                <option value="Portraits">Portraits</option>
+                <option value="landscapes">Landscapes</option>
+                <option value="Wildlife">Wildlife</option>
+                <option value="Other">Other Requests</option>
+              </select>
+
           </form>
 
       </div>
