--- a/index.html
+++ b/index.html
@@ -88,13 +88,19 @@
 
             <label for="first-name">First Name:</label>
             <input id="first-name"type="text" required>
+
             <br>
+
             <label for="surname">Surname:</label>
             <input id="surname" type="text" required>
+
             <br>
+
             <label for="email">Email:</label>
             <input id="email" type="email" required>
+
             <br>
+
             <label for="occasion">Occasion Type:</label>
               <select name="occasion" id="ocassion" required>
                 <option value="Wedding">Wedding</option>
@@ -106,6 +112,17 @@
                 <option value="Other">Other Requests</option>
               </select>
 
+            <br>
+
+            <label for="date">Date:</label>
+            <input type="date" required>
+            
+            <br>
+
+            <input type="submit">
+
+            <input type="reset">
+            
           </form>
 
       </div>
