Create a textarea in the form

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
             
             <br>
 
+            <textarea cols="30" rows="10" placeholder="enter message here"></textarea>
+
             <input type="submit">
 
             <input type="reset">
-            
+
           </form>
 
       </div>
