--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <br>
 
             <label for="date">Date:</label>
-            <input type="date" required>
+            <input type="date">
             
             <br>
 
