Give the submit and reset buttons a value

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 
             <textarea cols="30" rows="10" placeholder="enter message here"></textarea>
 
-            <input type="submit">
+            <input type="submit" value="Submit">
 
-            <input type="reset">
+            <input type="reset" value="Reset">
 
           </form>
 
