--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
           <form action="" method="get">
 
             <label for="first-name">First Name:</label>
-            <input id="first-name"type="text" required>
+            <input id="first-name"type="text" placeholder="Enter your first name" required>
 
             <br>
 
             <label for="surname">Surname:</label>
-            <input id="surname" type="text" required>
+            <input id="surname" type="text" placeholder="Enter your surname" required>
 
             <br>
 
             <label for="email">Email:</label>
-            <input id="email" type="email" required>
+            <input id="email" type="email" placeholder="Enter an email address" required>
 
             <br>
 
@@ -119,7 +119,7 @@
             
             <br>
 
-            <textarea cols="30" rows="10" placeholder="enter message here"></textarea>
+            <textarea cols="30" rows="10" placeholder="Enter a message here"></textarea>
 
             <input type="submit" value="Submit">
 
