--- a/index.html
+++ b/index.html
@@ -118,9 +118,12 @@
             <label for="date">Date:</label>
             <input type="date">
             </div>
+
             <div>
-            <textarea cols="30" rows="10" placeholder="Enter a message here"></textarea>
+            <label for="message">Leave a message:</label>
+            <textarea id="message" cols="30" rows="10" placeholder="Enter a message here"></textarea>
             </div>
+
             <input type="submit" value="Submit">
 
             <input type="reset" value="Reset">
