Add footer element to html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
       <h1 class="logo"><a href="index.html">Anto's <i class="fa-solid fa-camera"></i> Photos</a></h1>
       <nav>
+        <!--Main Navigation-->
         <ul class="nav-links">
           <li><a href="#home-section">home</a></li>
           <li><a href="#about-section">about</a></li>
@@ -79,6 +80,7 @@
         <img src="assets/images/horses-posing.jpg" alt="Horses posing in a field">
       </div>
     </section>
+    <!--Contact Us Page-->
     <section id="contact-section">
       <div id="contact-us">
         <h2>
@@ -133,6 +135,7 @@
       </div>
 
     </section>
+    <footer></footer>
   </div>
 </body>
 
