--- a/index.html
+++ b/index.html
@@ -135,7 +135,14 @@
       </div>
 
     </section>
-    <footer></footer>
+      <footer>
+        <ul>
+          <li><a href="https://www.facebook.com">Facebook</a></li>
+          <li><a href="https://www.youtube.com">Youtube</a></li>
+          <li><a href="https://www.instagram.com">Instagram</a></li>
+        </ul>
+
+      </footer>
   </div>
 </body>
 
