--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
     </section>
       <footer>
         <ul>
-          <li><a href="https://www.facebook.com">Facebook</a></li>
-          <li><a href="https://www.youtube.com">Youtube</a></li>
-          <li><a href="https://www.instagram.com">Instagram</a></li>
+          <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
 
       </footer>
