--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
     </section>
       <footer>
         <ul>
-          <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
 
       </footer>
