--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     </section>
       <footer>
-        <ul>
+        <ul id="footer-links">
           <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
           <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
