Link the book now button in the home page to the contact-us section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3>
           All events catered for, hit the button below to get in touch.
         </h3>
-        <button id="book-now"><a href="#">Book Now!</a></button>
+        <button id="book-now"><a href="#contact-section">Book Now!</a></button>
       </div>
     </section>
     <!--About Page-->
