Move h1 tags with class of logo around the logo text and change the font size in css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="hero-image">
     <header>
-      <h1 class="logo"><a href="index.html">Anto's <i class="fa-solid fa-camera"></i> Photos</a></h1>
+      <a href="index.html"><h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos</h1></a>
       <nav>
         <!--Main Navigation-->
         <ul class="nav-links">
