--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <!--Home Page-->
     <section id="home-section">
-      <div id="slogan">
+      <div id="home">
         <h2>
           Need a Photographer?
         </h2>
