Add name attributes to relevent form input elements

--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 
             <div>
               <label for="first-name">First Name:</label>
-              <input id="first-name"type="text" placeholder="Enter your first name" required>
+              <input id="first-name"type="text" name="First_name" placeholder="Enter your first name" required>
             </div>
 
             <div>
               <label for="surname">Surname:</label>
-              <input id="surname" type="text" placeholder="Enter your surname" required>
+              <input id="surname" type="text" name="Surname" placeholder="Enter your surname" required>
             </div>
 
             <div>
               <label for="email">Email:</label>
-              <input id="email" type="email" placeholder="Enter an email address" required>
+              <input id="email" type="email" name="Email_address" placeholder="Enter an email address" required>
            </div>
 
            <div>
@@ -118,12 +118,12 @@
 
             <div>
             <label for="date">Date:</label>
-            <input type="date">
+            <input type="date" name="Date">
             </div>
 
             <div>
             <label for="message">Leave a message:</label>
-            <textarea id="message" cols="30" rows="10" placeholder="Enter a message here"></textarea>
+            <textarea id="message" cols="30" rows="10" name="Customer_message" placeholder="Enter a message here"></textarea>
             </div>
 
             <input type="submit" value="Submit">
