Add ci formdump to form action and add a method of post

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h2>
           Contact Us
         </h2>
-          <form action="" method="get">
+          <form action="https://formdump.codeinstitute.net/" method="post">
 
             <div>
               <label for="first-name">First Name:</label>
