Add a class of text-input to to form input elements

--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 
             <div>
               <label for="first-name">First Name:</label>
-              <input id="first-name"type="text" name="First_name" placeholder="Enter your first name" required>
+              <input id="first-name"type="text" class="text-input" name="First_name" placeholder="Enter your first name" required>
             </div>
 
             <div>
               <label for="surname">Surname:</label>
-              <input id="surname" type="text" name="Surname" placeholder="Enter your surname" required>
+              <input id="surname" type="text" class="text-input" name="Surname" placeholder="Enter your surname" required>
             </div>
 
             <div>
               <label for="email">Email:</label>
-              <input id="email" type="email" name="Email_address" placeholder="Enter an email address" required>
+              <input id="email" type="email" class="text-input" name="Email_address" placeholder="Enter an email address" required>
            </div>
 
            <div>
