Add .text-input to more input and text-area elements

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <input id="email" type="email" class="text-input" name="Email_address" placeholder="Enter an email address" required>
 
             <label for="occasion">Occasion:</label>
-              <select name="occasion" id="ocassion" required>
+              <select name="occasion" id="ocassion" class="text-input" required>
                 <option value="Wedding">Wedding</option>
                 <option value="Christening/Communion/Confirmation">Christening/Communion/Confirmation</option>
                 <option value="Birthday/Party">Birthday/Party</option>
@@ -110,10 +110,10 @@
               </select>
 
             <label for="date">Date:</label>
-            <input type="date" name="Date">
+            <input type="date" class="text-input" name="Date">
 
             <label for="message">Leave a message:</label>
-            <textarea id="message" cols="30" rows="10" name="Customer_message" placeholder="Enter a message here"></textarea>
+            <textarea id="message" cols="30" rows="10" class="text-input" name="Customer_message" placeholder="Enter a message here"></textarea>
 
             <input type="submit" value="Submit">
 
