Add a class of submit and reset to form buttons

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             <label for="message">Leave a message:</label>
             <textarea id="message" cols="30" rows="10" class="text-input" name="Customer_message" placeholder="Enter a message here"></textarea>
 
-            <input type="submit" value="Submit">
+            <input type="submit" class="submit" value="Submit">
 
-            <input type="reset" value="Reset">
+            <input type="reset" class="reset" value="Reset">
 
           </form>
 
