Give the date input type an id in the form

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </select>
 
             <label for="date">Date:</label>
-            <input type="date" class="text-input" name="Date">
+            <input type="date" id="date" class="text-input" name="Date">
 
             <label for="message">Leave a message:</label>
             <textarea id="message" cols="30" rows="10" class="text-input" name="Customer_message" placeholder="Enter a message here"></textarea>
