Give footer links an alt attribute

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
     </section>
       <footer>
         <ul id="footer-links">
-          <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com" alt="Facebook Link" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.youtube.com" alt="Youtube Link" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="https://www.instagram.com" alt="Instagram Link" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
 
       </footer>
