Add a title attribute to each footer link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <input id="email" type="email" class="text-input" name="Email_address" placeholder="Enter an email address" required>
 
             <label for="occasion">Occasion:</label>
-              <select name="occasion" id="ocassion" class="text-input" required>
+              <select name="occasion" id="occasion" class="text-input" required>
                 <option value="Wedding">Wedding</option>
                 <option value="Christening/Communion/Confirmation">Christening/Communion/Confirmation</option>
                 <option value="Birthday/Party">Birthday/Party</option>
@@ -126,9 +126,9 @@
     </section>
       <footer>
         <ul id="footer-links">
-          <li><a href="https://www.facebook.com" alt="Facebook Link" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="https://www.youtube.com" alt="Youtube Link" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a href="https://www.instagram.com" alt="Instagram Link" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com" alt="Facebook Link" title="Facebook Link" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.youtube.com" alt="Youtube Link" title="Youtube Link" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="https://www.instagram.com" alt="Instagram Link" title="Instagram Link" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
 
       </footer>
