--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Great Photographer services in Ireland">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/4e483d3294.js" crossorigin="anonymous"></script>
   <title>Anto's Photos</title>
