--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Great Photographer services in Ireland">
+  <meta name="keywords" content="Photographer, photo, ireland">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/4e483d3294.js" crossorigin="anonymous"></script>
   <title>Anto's Photos</title>
