Add meta author and content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Great Photographer services in Ireland">
   <meta name="keywords" content="Photographer, photo, ireland">
+  <meta name="author" content="Anthony Ducie">
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/4e483d3294.js" crossorigin="anonymous"></script>
   <title>Anto's Photos</title>
