--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3>
           All events catered for, hit the button below to get in touch.
         </h3>
-        <button id="book-now"><a href="#contact-section">Book Now!</a></button>
+        <a id="book-now" href="#contact-section">Book Now!</a>
       </div>
     </section>
     <!--About Page-->
