Add a div called .container to index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <div class="container">
   <div id="hero-image">
     <header>
       <a href="index.html"><h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos</h1></a>
@@ -135,6 +136,7 @@
         </ul>
 
       </footer>
+  </div>
   </div>
 </body>
 
