Add a <p> element around the #book-now anchor and style it in css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3>
           All events catered for, hit the button below to get in touch.
         </h3>
-        <a id="book-now" href="#contact-section">Book Now!</a>
+        <p><a id="book-now" href="#contact-section">Book Now!</a></p>
       </div>
     </section>
     <!--About Page-->
