Add and style a p element for copyright content

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <li><a href="https://www.youtube.com" alt="Youtube Link" title="Youtube Link" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
           <li><a href="https://www.instagram.com" alt="Instagram Link" title="Instagram Link" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
-
+        <p>Copyright &copy; Anthony Ducie</p>
       </footer>
   </div>
   </div>
