Add an aria-label to the #hero-image div

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container">
-  <div id="hero-image">
+  <div id="hero-image" aria-label="A Picture of two children on a forest walk.">
     <header>
       <a href="index.html"><h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos</h1></a>
       <nav>
