--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <nav>
         <!--Main Navigation-->
         <ul class="nav-links">
-          <li><a href="#home-section">home</a></li>
-          <li><a href="#about-section">about</a></li>
-          <li><a href="#gallery-section">gallery</a></li>
-          <li><a href="#contact-section">contact us</a></li>
+          <li><a href="#home-section" aria-label="Go to the home section">home</a></li>
+          <li><a href="#about-section" aria-label="Go to the about section">about</a></li>
+          <li><a href="#gallery-section" aria-label="Go to the gallery section">gallery</a></li>
+          <li><a href="#contact-section" aria-label="Go to the contact section">contact us</a></li>
         </ul>
       </nav>
     </header>
