--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
   <div id="hero-image" aria-label="A Picture of two children on a forest walk.">
     <header>
-      <a href="index.html"><h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos</h1></a>
+      <a href="index.html" aria-label="A logo that reloads the website"><h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos</h1></a>
       <nav>
         <!--Main Navigation-->
         <ul class="nav-links">
