Add aria labels to footer links

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     </section>
       <footer>
         <ul id="footer-links">
-          <li><a href="https://www.facebook.com" alt="Facebook Link" title="Facebook Link" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="https://www.youtube.com" alt="Youtube Link" title="Youtube Link" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a href="https://www.instagram.com" alt="Instagram Link" title="Instagram Link" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com" aria-label="Go to facebook website" title="Facebook Link" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.youtube.com" aria-label="Go to youtube website" title="Youtube Link" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="https://www.instagram.com" aria-label="Go to instagram website" title="Instagram Link" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
         <p>Copyright &copy; Anthony Ducie</p>
       </footer>
