Edit gallery images alt values

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <p>
           Examples of our work:
         </p>
-        <img src="assets/images/cat-chilling.jpg" alt="Cat chilling on a pillar">
-        <img src="assets/images/lake-sunset-small.jpg" alt="Sun setting by the lake">
-        <img src="assets/images/horses-posing.jpg" alt="Horses posing in a field">
+        <img src="assets/images/cat-chilling.jpg" alt="A Picture of a cat chilling on a pillar">
+        <img src="assets/images/lake-sunset-small.jpg" alt="A Picture of the sun setting by the lake">
+        <img src="assets/images/horses-posing.jpg" alt="A Picture of two horses posing in a field">
       </div>
     </section>
     <!--Contact Us Page-->
