Add more aria labels to index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           All events catered for, hit the button below to get in touch.
         </p>
         <br>
-        <p><a id="book-now" href="#contact-section">Book Now!</a></p>
+        <p><a id="book-now" href="#contact-section" aria-label="Go to the contact section">Book Now!</a></p>
       </div>
     </section>
     <!--About Page-->
