Tidy html code layout

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
   <title>Anto's Photos</title>
 </head>
 
-<body>
+<body></body>
   <div class="container">
+  <!--Background Image-->
   <div id="hero-image" aria-label="A Picture of two children on a forest walk.">
     <header>
-      <a href="index.html" aria-label="A logo that reloads the website"><h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos</h1></a>
+      <a href="index.html" aria-label="A logo that reloads the website">
+        <h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos
+        </h1>
+      </a>
+      <!--Main Navigation-->
       <nav>
-        <!--Main Navigation-->
         <ul class="nav-links">
           <li><a href="#home-section" aria-label="Go to the home section">home</a></li>
           <li><a href="#about-section" aria-label="Go to the about section">about</a></li>
@@ -47,7 +51,10 @@
           All events catered for, hit the button below to get in touch.
         </p>
         <br>
-        <p><a id="book-now" href="#contact-section" aria-label="Go to the contact section">Book Now!</a></p>
+        <p>
+          <a id="book-now" href="#contact-section" aria-label="Go to the contact section">Book Now!
+          </a>
+        </p>
       </div>
     </section>
     <!--About Page-->
@@ -80,6 +87,7 @@
         <p>
           Examples of our work:
         </p>
+        <!--Gallery Images-->
         <img src="assets/images/cat-chilling.jpg" alt="A Picture of a cat chilling on a pillar">
         <img src="assets/images/lake-sunset-small.jpg" alt="A Picture of the sun setting by the lake">
         <img src="assets/images/horses-posing.jpg" alt="A Picture of two horses posing in a field">
@@ -124,22 +132,21 @@
             <input type="submit" class="submit" value="Submit">
 
             <input type="reset" class="reset" value="Reset">
-
           </form>
-
       </div>
-
     </section>
+    <!--Footer Social Links-->
       <footer>
         <ul id="footer-links">
           <li><a href="https://www.facebook.com" aria-label="Go to facebook website" title="Facebook Link" target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a></li>
           <li><a href="https://www.youtube.com" aria-label="Go to youtube website" title="Youtube Link" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a></li>
           <li><a href="https://www.instagram.com" aria-label="Go to instagram website" title="Instagram Link" target="_blank" rel="noopener"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
+        <!--Copyright Information-->
         <p>Copyright &copy; Anthony Ducie</p>
       </footer>
   </div>
-  </div>
+</div>
 </body>
 
 </html>
